crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_alias_map.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# User

## Description

See [`helper`](utils.qmd).
