crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_exec_dontrun_enabled.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Dangerous

## Examples

```{r}
stop("error")
```
