crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_exec_donttest_disabled.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Slow

## Examples

```r
Sys.sleep(10)
```
