crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_external_link_url.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Wrapper

## Description

Uses [`dplyr::mutate`](x-r-help:dplyr/mutate).
