crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_external_link_url_s4_class.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Caller

## Description

See [`methods::envRefClass-class`](x-r-help:methods/envRefClass-class) and [`MyClass-class`](https://example.com/MyClass-class.html).
