crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_external_package_urls.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Wrapper

## Description

Uses [`dplyr::filter`](https://dplyr.tidyverse.org/reference/filter.html).
