crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_prefer_ascii_math.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Poisson

## Description

 The density is 

```
p(x) = lambda^x
exp(-lambda) / x!
```

 for `x = 0, 1, 2, ...`. The mean is $\lambda$ and $E(X)$ equals it.
