crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_topic_link_url_internal.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Caller

## Description

Uses [`unknown_func`](x-r-help:/unknown_func).
