crates/rd2qmd-core/src/snapshots/rd2qmd_core__tests__rd_converter_topic_link_url_s4_class.snap
---
source: crates/rd2qmd-core/src/lib.rs
expression: result
---
# Caller

## Description

See [`MyClass-class`](x-r-help:/MyClass-class) and [`methods::envRefClass-class`](x-r-help:methods/envRefClass-class).
